Fixed: div.task incorrectly wrapping on Gantt Chart (#4813).
git-svn-id: svn+ssh://rubyforge.org/var/svn/redmine/trunk@3414 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -728,6 +728,7 @@ background-image:url('../images/close_hl.png');
   padding:0;
   margin:0;
   line-height:0.8em;
+  white-space:nowrap;
 }
 
 .task_late { background:#f66 url(../images/task_late.png); border: 1px solid #f66; }
